# cookiecutter-python

./: .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: docs.yml  lint.yml  pre-commit.yml  release.yml
{{ cookiecutter.repo_name }}/docs/: conf.py  index.md  install.md
{{ cookiecutter.repo_name }}/tests/: test_cade_task.py  test_lib.py  test_{{ cookiecutter.python_module_name }}.py  {% if cookiecutter.project_type == "cli" %}test_cli.py{% endif %}  {% if cookiecutter.project_type == "cli" %}test_integration.py{% endif %}
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_module_name }}/: __init__.py  __main__.py  {% if cookiecutter.project_type == "cli" %}cli.py{% endif %}
