[tool.poetry]
name = "{{ cookiecutter.python_module_name }}"
version = "{{ cookiecutter.python_module_version }}"
description = "{{ cookiecutter.python_module_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.urls]
Repository = ""
Documentation = ""
{% if cookiecutter.project_type == "cli" and cookiecutter.script_name %}
[tool.poetry.scripts]
{{ cookiecutter.script_name }} = '{{ cookiecutter.python_module_name }}.cli:app'
{% endif %}
[tool.poetry.dependencies]
python = ">=3.9"
{% if cookiecutter.project_type == "cli" %}typer = {extras = ["all"], version = "^0.9.0"}
{% endif %}
[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4.1.0"
pytest = ">=8.0.0"
ruff = ">=0.2.1"
mypy = ">=1.4.1"
devtools = ">=0.12.2"
pygments = ">=2.15.1"
# pytest-mock = ">=3.11.1"

[tool.poetry.group.docs.dependencies]
pygments = ">=2.15.1"
sphinx = ">=7.2.6"
myst-parser = ">=2.0.0"
sphinx-press-theme = ">=0.8.0"
sphinx-copybutton = ">=0.5.2"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-autobuild = ">=2024.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = ["E", "F", "I"]
line-length = 120
