[project]
name = "{{ cookiecutter.python_module_name }}"
version = "{{ cookiecutter.python_module_version }}"
description = "{{ cookiecutter.python_module_description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
readme = "README.md"
requires-python = ">=3.12"
{% if cookiecutter.project_type == "cli" %}
dependencies = [
  "typer>=0.25.0",
]
{% else %}
dependencies = []
{% endif %}

[project.urls]
Repository = "https://github.com/{{ cookiecutter.repo_owner }}/{{ cookiecutter.repo_name }}"
Documentation = ""
{% if cookiecutter.project_type == "cli" and cookiecutter.script_name %}
[project.scripts]
{{ cookiecutter.script_name }} = "{{ cookiecutter.python_module_name }}.cli:app"
{% endif %}

[dependency-groups]
dev = [
  "devtools>=0.12.2",
  "mypy>=1.20.2",
  "pygments>=2.20.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  # "pytest-mock>=3.11.1",
]
docs = [
  "myst-parser>=5.0.0",
  "pygments>=2.20.0",
  "sphinx>=9.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.10.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-press-theme>=0.9.1",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = [
    "B",  # Bugbear
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # Import sorting
    "C4",  # List comprehensions
    # "FIX",  # TODO, FIX, etc
    "LOG",  # Logger bugs
    "PT",  # Pytest
    "RET",  # Returns
    "SIM",  # Simplify
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501"  # Line too long
]
line-length = 120

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
